# dimos_utils

./: .gitignore  Header.msg  README.md  depth_to_colored_pointcloud.py  depth_to_pointcloud copy.py  lcm_batch_processor.sh  lcm_foxglove_bridge.py  lcm_foxglove_bridge_all_fixed copy.py  lcm_foxglove_bridge_final.py  lcm_foxglove_bridge_fixed.py  lcm_foxglove_bridge_tf_fixed.py  lcm_foxglove_bridge_v2.py  lcm_foxglove_bridge_v3.py  lcm_foxglove_bridge_v4.py  ros_to_lcm.py  test_pointcloud.py
assets/: alfred.xml  collision_pairs.json  devkit_base_descr copy.urdf  devkit_base_descr.urdf  devkit_base_descr_stl.urdf  motion_planner.py  test_ik.py
cpp_lcm_msgs/: README.md
cpp_lcm_msgs/actionlib_msgs/: GoalID.hpp  GoalStatus.hpp  GoalStatusArray.hpp
cpp_lcm_msgs/builtin_interfaces/: Duration.hpp  Time.hpp
cpp_lcm_msgs/diagnostic_msgs/: DiagnosticArray.hpp  DiagnosticStatus.hpp  KeyValue.hpp
cpp_lcm_msgs/foxglove_msgs/: ArrowPrimitive.hpp  CameraCalibration.hpp  CircleAnnotation.hpp  Color.hpp  CompressedImage.hpp  CompressedVideo.hpp  CubePrimitive.hpp  CylinderPrimitive.hpp  FrameTransform.hpp  FrameTransforms.hpp  GeoJSON.hpp  Grid.hpp  ImageAnnotations.hpp  KeyValuePair.hpp  LaserScan.hpp  LinePrimitive.hpp  LocationFix.hpp  Log.hpp  ModelPrimitive.hpp  PackedElementField.hpp  Point2.hpp  PointCloud.hpp  PointsAnnotation.hpp  PoseInFrame.hpp  PosesInFrame.hpp  RawAudio.hpp  RawImage.hpp  SceneEntity.hpp  SceneEntityDeletion.hpp  SceneUpdate.hpp  SpherePrimitive.hpp  TextAnnotation.hpp  TextPrimitive.hpp  TriangleListPrimitive.hpp  Vector2.hpp
cpp_lcm_msgs/geometry_msgs/: Accel.hpp  AccelStamped.hpp  AccelWithCovariance.hpp  AccelWithCovarianceStamped.hpp  Inertia.hpp  InertiaStamped.hpp  Point.hpp  Point32.hpp  PointStamped.hpp  Polygon.hpp  PolygonStamped.hpp  Pose.hpp  Pose2D.hpp  PoseArray.hpp  PoseStamped.hpp  PoseWithCovariance.hpp  PoseWithCovarianceStamped.hpp  Quaternion.hpp  QuaternionStamped.hpp  Transform.hpp  TransformStamped.hpp  Twist.hpp  TwistStamped.hpp  TwistWithCovariance.hpp  TwistWithCovarianceStamped.hpp  Vector3.hpp  Vector3Stamped.hpp  Wrench.hpp  WrenchStamped.hpp
cpp_lcm_msgs/nav_msgs/: GridCells.hpp  MapMetaData.hpp  OccupancyGrid.hpp  Odometry.hpp  Path.hpp
cpp_lcm_msgs/sensor_msgs/: BatteryState.hpp  CameraInfo.hpp  ChannelFloat32.hpp  CompressedImage.hpp  FluidPressure.hpp  Illuminance.hpp  Image.hpp  Imu.hpp  JointState.hpp  Joy.hpp  JoyFeedback.hpp  JoyFeedbackArray.hpp  LaserEcho.hpp  LaserScan.hpp  MagneticField.hpp  MultiDOFJointState.hpp  MultiEchoLaserScan.hpp  NavSatFix.hpp  NavSatStatus.hpp  PointCloud.hpp  PointCloud2.hpp  PointField.hpp  Range.hpp  RegionOfInterest.hpp  RelativeHumidity.hpp  Temperature.hpp  TimeReference.hpp
cpp_lcm_msgs/shape_msgs/: Mesh.hpp  MeshTriangle.hpp  Plane.hpp  SolidPrimitive.hpp
cpp_lcm_msgs/std_msgs/: Bool.hpp  Byte.hpp  ByteMultiArray.hpp  Char.hpp  ColorRGBA.hpp  Duration.hpp  Empty.hpp  Float32.hpp  Float32MultiArray.hpp  Float64.hpp  Float64MultiArray.hpp  Header.hpp  Int16.hpp  Int16MultiArray.hpp  Int32.hpp  Int32MultiArray.hpp  Int64.hpp  Int64MultiArray.hpp  Int8.hpp  Int8MultiArray.hpp  MultiArrayDimension.hpp  MultiArrayLayout.hpp  String.hpp  Time.hpp  UInt16.hpp  UInt16MultiArray.hpp  (+6 more)
debugging_scripts/: joy_listener.py  lcm_publish_test.py  phone_teleop_websocket_server.py  sample_point_cloud.py  test_image.py
lcm_files/: Header.lcm  ImageMarker.lcm  Marker.lcm  MultiDOFJointTrajectoryPoint.lcm  TimeReference.lcm  actionlib_msgs_GoalID.lcm  nav_msgs_MapMetaData.lcm  std_msgs_Duration.lcm  std_msgs_Time.lcm  trajectory_msgs_JointTrajectoryPoint.lcm
python_lcm_msgs/: README.md  config.json  fix_imports.py  lcm_foxglove_bridge.py  lcm_foxglove_bridge_threaded.py  lcm_publish_test.py  lcm_receive_test.py  lcm_video_publisher.py  lcmbag-foxglove-support.py  lcmbag.py  lcmtopic.py  robot_state_publisher.py  setup.py  test_joint_state_publisher.py  websocket_server.py
tf_lcm/: CMakeLists.txt  README.md  build_and_test.sh
tf_lcm/include/tf_lcm/: broadcaster.hpp  buffer.hpp  exceptions.hpp  listener.hpp  transform_storage.hpp
tf_lcm/python/: CMakeLists.txt  MANIFEST.in  README.md  build.py  debug_lcm_msgs.py  pyproject.toml  setup.py  setup_extension.py  test_bindings.py  tf_lcm_pybind.cpp
tf_lcm/python/examples/: direct_lcm_test.py  final_robot_link_test.py  lcm_monitor.py  minimal_robot_link_test.py  robot_link_broadcaster.py  robot_link_lookup_test.py  simple_tf_listener.py  static_transform_broadcaster.py  tf_broadcaster.py  tf_listener.py  tf_time_travel.py  transform_benchmark.py
tf_lcm/python/test/: test_tf_lcm.py
tf_lcm/python/tf_lcm_py/: __init__.py  direct_import_depr.py
tf_lcm/python/tf_lcm_py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tf_lcm/src/: broadcaster.cpp  buffer.cpp  listener.cpp  transform_storage.cpp
tf_lcm/test/: CMakeLists.txt  chained_test.cpp  minimal_test.cpp  robot_link_lookup_test.cpp  simple_tf_demo.cpp  test_broadcaster.cpp  test_listener.cpp  test_lookup.cpp  test_static_transform.cpp  test_time_travel.cpp  test_timeout.cpp  time_travel_benchmark.cpp  time_travel_demo.cpp  transform_benchmark.cpp
utils/: README_joy.md  README_teleop_twist_joy.md  check_collision.py  drake_depth_to_pointcloud.py  drake_test.ipynb  ik_with_collision_checking_pc.py  joy.py  kinematics.py  lcm_image_viewer_qt.py  lcm_video_publisher.py  lcmbag.py  octree_collision.py  robot_state_publisher.py  run_octree_benchmark.py  teleop_arm_keyboard.py  teleop_twist_joy.py  teleop_twist_keyboard.py  test_joint_state_publisher.py  transform_modifier.py
(+242 files in other folders)
